Began base styling and organisation

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,1 +1,5 @@
-@import 'base/reset.css';
+@import 'base/reset.scss';
+@import 'base/variables.scss';
+@import 'base/layout.scss';
+
+@import 'components/header.scss';
