--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -14,10 +14,11 @@
 </head>
 
 <body>
-
   {{ block "header" . }}{{ partial "header" . }}{{end}}
 
-  {{ block "main" . }}{{end}}
+  <main class="main">
+    {{ block "main" . }}{{end}}
+  </main>
 
   {{ block "footer" . }}{{ partial "footer" . }}{{end}}
 
