--- a/src/css/base/variables.scss
+++ b/src/css/base/variables.scss
@@ -1,3 +1,4 @@
-$COLOR_BLUE: #9acced;
-
+$COLOR_BLUE: rgb(52, 152, 219);
 $COLOR_WHITE: rgb(255, 255, 255);
+
+$COLOR_BLUE: mix($COLOR_BLUE, $COLOR_WHITE, 30%);
