Experimenting with Hugo

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,5 +1,13 @@
 <header class="header">
-  <h1 class="header__logo">
-    Test
-  </h1>
+  <a class="header__logo" href="{{ "/" | relURL }}">
+    Craig Baldwin [dot] com
+  </a>
+
+  <nav class="header__navigation">
+    <li class="header__list-item">
+      <a class="header__link" href="{{ "/about" | relURL }}">
+        About
+      </a>
+    </li>
+  </nav>
 </header>
