--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -2,6 +2,8 @@
   <h1 class="card__title">{{ .Get "title" }}</h1>
 
   <p class="card__text">
-
+    {{ if .Get "text" }}
+      {{ .Get "text" }}
+    {{ end }}
   </p>
 </div>
