Organisation, font change

--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,3 +1,5 @@
-{{ define "main" }} {{ $section := .Site.GetPage "section" .Section }}
+{{ define "main" }}
+  {{ $section := .Site.GetPage "section" .Section }}
+
   {{- .Content -}}
 {{ end }}
