--- a/src/css/base/grid.scss
+++ b/src/css/base/grid.scss
@@ -1,5 +1,5 @@
 /**
- * Grid.
+ * Base > Grid.
  * ------------------------------------------------------------------------------
  * Layout grid and media breakpoint.
  *
