--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,16 +1,17 @@
+<!-- Partials > Header. -->
+<!-- Header with logo and links. -->
 {{ $url := .URL }}
 
 <header class="header">
-  <a class="header__logo" href="{{ "/" | relURL }}">
+  <a class="header__logo text-link" href="{{ "/" | relURL }}">
     Craig Baldwin [dot] com
   </a>
-
 
   <nav class="header__navigation">
     {{ range .Site.Menus.main }}
       <li class="header__list-item">
         <a
-          class="header__link {{ if eq $url .URL }}is-active{{ end }}"
+          class="header__link text-link {{ if eq $url .URL }}is-active{{ end }}"
           href="{{ .URL }}"
         >
           {{ .Title }}
