--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -1,4 +1,10 @@
+<!-- Shortcodes > Card. -->
+<!-- Coloured card block. -->
 <div class="card">
+  {{ if .Get "title" }}
+    <h1 class="card__title">{{ .Get "title" }}</h1>
+  {{ end }}
+
   <p class="card__copy">
     {{ .Get "copy" }}
   </p>
