--- a/src/css/base/colour.scss
+++ b/src/css/base/colour.scss
@@ -1,10 +1,12 @@
 /**
- * Colours.
+ * Base > Colours.
  * ------------------------------------------------------------------------------
  * Colour variables.
  *
  */
-$COLOR_BLUE: rgb(52, 152, 219);
-$COLOR_WHITE: rgb(255, 255, 255);
+$COLOR_BRIGHT_BLUE: rgb(52, 152, 219);
 
-$COLOR_BLUE: mix($COLOR_BLUE, $COLOR_WHITE, 30%);
+$COLOR_WHITE: rgb(255, 255, 255);
+$COLOR_BLACK: rgb(44, 62, 80);
+
+$COLOR_BLUE: mix($COLOR_BRIGHT_BLUE, $COLOR_WHITE, 30%);
