--- a/src/css/base/reset.scss
+++ b/src/css/base/reset.scss
@@ -1,5 +1,5 @@
 /**
- * Reset.
+ * Base > Reset.
  * ------------------------------------------------------------------------------
  * Resets styles to base.
  *
