--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -4,10 +4,18 @@
  * Import all styles.
  *
  */
+
+/**
+ * Base styles.
+ */
 @import 'base/reset';
+@import 'base/animation';
 @import 'base/colour';
 @import 'base/grid';
 @import 'base/typography';
 
+/**
+ * Components (partials/shortcodes).
+ */
 @import 'components/card';
 @import 'components/header';
