Site maintenance, built footer

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -5,7 +5,7 @@
 <header class="header">
   <div class="header__container container">
     <a class="header__logo text-link" href="{{ "/" | relURL }}">
-      {{ $.Site.Title }}
+      {{ $.Site.Params.siteTitle }}
     </a>
 
     <nav class="header__navigation">
