--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -18,6 +18,7 @@
  * Components (partials/shortcodes).
  */
 @import 'components/card';
+@import 'components/footer';
 @import 'components/footnote';
 @import 'components/footnotes';
 @import 'components/header';
