--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,4 +1,21 @@
 <!-- Partials > Footer. -->
 <!-- Site footer. -->
 <footer class="footer">
+  <span class="footer__item">
+    &copy; 2008-{{ now.Format "2006"}} Craig Baldwin
+  </span>
+
+  <a
+    class="footer__item footer__link text-link"
+    href="{{ "/about/info" | relURL }}"
+  >
+    Info
+  </a>
+
+  <a
+    class="footer__item footer__link text-link"
+    href="https://github.com/csbrightside/craigbaldwin.com"
+  >
+    Repo
+  </a>
 </footer>
