--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -7,6 +7,7 @@
 .header {
   background-color: $COLOR_WHITE;
   padding: $SPACING_M 0;
+  position: relative;
 
   &__container {
     align-items: center;
@@ -14,8 +15,20 @@
     justify-content: space-between;
   }
 
+  &__menu {
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    height: 50px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(10px, -50%);
+    width: 50px;
+  }
+
   &__navigation {
-    display: flex;
+    display: none;
   }
 
   &__list-item {
@@ -27,6 +40,12 @@
   &__link {
     &.is-active {
       color: $COLOR_BLUE;
+    }
+  }
+
+  @include mq($from: medium) {
+    &__navigation {
+      display: flex;
     }
   }
 
