--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Partials > Footer. -->
 <!-- Site footer. -->
-<footer class="footer">
+<footer class="footer container">
   <span class="footer__item">
     &copy; 2008-{{ now.Format "2006"}} Craig Baldwin
   </span>
