--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -3,7 +3,7 @@
 <div
   class="
     card card--{{ lower $.Page.Title }}
-    background-color background-color--{{ lower $.Page.Title }}
+    background-color background-color--{{ lower $.Page.Params.colour }}
   "
 >
   {{ if .Get "title" }}
