--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -19,6 +19,8 @@
 /**
  * Components.
  */
+@import 'components/block';
+@import 'components/blocks';
 @import 'components/burger';
 @import 'components/card';
 @import 'components/footer';
