--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -19,7 +19,7 @@
       {{ range .Site.Menus.main }}
         <li class="header__list-item">
           <a
-            class="header__link text-link {{ if eq $url .URL }}is-active{{ end }}"
+            class="header__link text-link {{ if in $url .URL }}is-active{{ end }}"
             href="{{ .URL }}"
           >
             {{ .Title }}
