Kept code DRY by using helper classes for common layout styles

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -28,7 +28,7 @@
     {{ partial "header" . }}
   {{ end }}
 
-  <main class="main">
+  <main class="main responsive-margin-bottom">
     {{ block "main" . }}{{ end }}
   </main>
 
