--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -3,7 +3,7 @@
 {{ $url := .URL }}
 {{ $page := .Title }}
 
-<div class="footnotes container">
+<div class="footnotes container responsive-margin-bottom">
   {{ range .Site.Menus.main }}
     <a
       class="
