--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -4,6 +4,7 @@
   class="
     card card--{{ lower $.Page.Title }}
     background-color background-color--{{ lower $.Page.Params.colour }}
+    layout-span responsive-margin-bottom
   "
 >
   {{ if .Get "title" }}
