--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 
   {{ range .Site.Menus.footer }}
     <a
-      class="footer__item footer__link text-link"
+      class="footer__item footer__link text-link responsive-margin-bottom"
       href="{{ .URL }}"
     >
       {{ .Title }}
