--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -131,10 +131,11 @@ li {
 .text-link,
 %text-link {
   border-bottom: 1px solid $COLOR_BLACK;
-  color: $COLOR_BLACK;
+  color: currentColor;
   text-decoration: none;
 
   &:hover {
     border-bottom-color: $COLOR_BLUE;
+    color: $COLOR_BLUE;
   }
 }
