Added lazy loading to Mountains images

--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -9,6 +9,7 @@
           <img
             class="block__image"
             alt="{{ .Params.location }} {{ .Title }}"
+            loading="lazy"
             src="/images/{{ $.Page.Params.handle }}/{{ .Params.handle }}.jpg"
           >
         </div>
