Added map with markers using Leaflet

--- a/site/layouts/partials/map.html
+++ b/site/layouts/partials/map.html
@@ -1,7 +1,7 @@
 <!-- Partials > Map. -->
 <!-- Mountains map. -->
 <div class="map layout-span responsive-margin-bottom">
-  <div class="map__display" js-map="container"></div>
+  <div id="map" class="map__display"></div>
 
   <div class="map__progress">
     <div class="map__progress-bar" js-map="progressBar">
