--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -28,3 +28,8 @@
 @import 'components/footnotes';
 @import 'components/header';
 @import 'components/map';
+
+/**
+ * Apps.
+ */
+@import 'apps/leaflet';
