Began adding textures to card headings

--- a/src/styles/base/colour.scss
+++ b/src/styles/base/colour.scss
@@ -39,10 +39,38 @@ $COLOR_LIGHT_GREY: fade-colour($COLOR_BLACK, 20%);
  */
 .background-color {
   background-color: fade-colour($COLOR_BLUE);
+  position: relative;
 
+  /**
+   * Enable texture.
+   */
+  &#{&}--texture {
+    &::before {
+      content: '';
+      height: 100%;
+      mix-blend-mode: multiply;
+      position: absolute;
+      width: 100%;
+      z-index: $LAYER_BELOW;
+    }
+
+    > * {
+      z-index: $LAYER_BASE;
+    }
+  }
+
+  /**
+   * Colour settings.
+   */
   &#{&}--green,
   &#{&}--stats {
     background-color: fade-colour($COLOR_GREEN);
+
+    &::before {
+      background-image: url('/images/patterns/topography.png');
+      background-size: 350px auto;
+      opacity: 0.6;
+    }
   }
 
   &#{&}--orange,
@@ -53,6 +81,11 @@ $COLOR_LIGHT_GREY: fade-colour($COLOR_BLACK, 20%);
   &#{&}--purple,
   &#{&}--work {
     background-color: fade-colour($COLOR_PURPLE);
+
+    &::before {
+      background-image: url('/images/patterns/graph.png');
+      background-size: 21px auto;
+    }
   }
 
   &#{&}--red,
