--- a/site/layouts/404.html
+++ b/site/layouts/404.html
@@ -1,7 +1,11 @@
 {{ define "main" }}
+  <h1>Nothing here...</h1>
 
-<h1>Nothing Here...</h1>
-<h2 style="font-size: 120px; margin:0;">💩</h2>
-<h3><a href="{{ "/" | relURL }}">Go Home</a></h3>
+  <p>
+    My site has recently been re-built from scratch so it's possible that the page you're looking for has moved or been deleted.
+  </p>
 
+  <p>
+    Try <a class="text-link" href="{{ "/" | relURL }}">going home</a> and starting again.
+  </p>
 {{ end }}
