--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -7,7 +7,7 @@
   {{ range .Site.Menus.main }}
     <a
       class="
-       footnotes__footnote footnote
+       footnotes__footnote footnote footnote--{{ .Identifier}}
        background-color background-color--{{ .Identifier }}
        {{ if (eq $url .URL) }}is-hidden{{ end }}
        {{ if and (eq $page "Index") (eq .Title "Contact") }}is-hidden{{ end }}
