--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -24,6 +24,8 @@
 @import 'components/burger';
 @import 'components/card';
 @import 'components/chart';
+@import 'components/client';
+@import 'components/clients';
 @import 'components/footer';
 @import 'components/footnote';
 @import 'components/footnotes';
