Further development on the Work section

--- a/site/layouts/_default/work.html
+++ b/site/layouts/_default/work.html
@@ -6,20 +6,16 @@
 
     {{ range .Pages.ByWeight }}
       {{ if (eq .Params.type "selected") }}
-        <div class="clients__client client">
-          <h3 class="client__title">{{ .Title }}</h3>
-        </div>
+        {{ partial "client" . }}
       {{ end }}
     {{ end }}
   </div>
 
-  <div class="clients clients--list responsive-margin-bottom">
+  <div class="clients clients--list">
     <h2 class="clients__title visually-hidden">Others</h2>
     {{ range .Pages.ByTitle }}
       {{ if (eq .Params.type "list") }}
-        <div class="clients__client client">
-          <h3 class="client__title">{{ .Title }}</h3>
-        </div>
+        {{ partial "client" . }}
       {{ end }}
     {{ end }}
   </div>
