Updated Work layout

--- a/site/layouts/_default/work.html
+++ b/site/layouts/_default/work.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   {{- .Content -}}
 
-  <div class="clients clients--selected responsive-margin-bottom">
+  <div class="clients clients--selected">
     <h2 class="clients__title">Selected</h2>
 
     {{ range .Pages.ByWeight }}
