--- a/site/layouts/partials/client.html
+++ b/site/layouts/partials/client.html
@@ -1,6 +1,6 @@
 <!-- Partials > Client. -->
 <!-- Individual client display. -->
-<div class="clients__client client">
+<div class="clients__client client responsive-margin-bottom">
   <a
     class="client__image"
     href="{{ .Params.link }}"
