--- a/site/layouts/_default/work.html
+++ b/site/layouts/_default/work.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="clients clients--list">
-    <h2 class="clients__title visually-hidden">Others</h2>
+    <h2 class="clients__title visually-hidden">More</h2>
     {{ range .Pages.ByTitle }}
       {{ if (eq .Params.type "list") }}
         {{ partial "client" . }}
