--- a/src/styles/components/client.scss
+++ b/src/styles/components/client.scss
@@ -20,10 +20,13 @@
     display: block;
     height: 0;
     padding-bottom: 100%;
+    position: relative;
     width: 100%;
 
     &::after {
-      display: none;
+      position: absolute;
+      right: calc(#{$SPACING_3XS} - 1px);
+      top: calc(#{$SPACING_3XS} - 4px);
     }
 
     &:hover {
