--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -42,4 +42,7 @@
       </div>
     {{ end }}
   </div>
+
+  <link href="/vendors/leaflet.min.css" rel="stylesheet">
+  <script src="/vendors/leaflet.min.js"></script>
 {{ end }}
