Fixed responsive display of distances charts

--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -3,13 +3,19 @@
 
   <div class="blocks">
     <div class="blocks__block chart">
-      <h2 class="chart__title">Distance By Foot</h2>
-      <canvas js-chart="walking"></canvas>
+      <h2 class="chart__title">Distance By Foot (miles)</h2>
+
+      <div class="chart__chart">
+        <canvas js-chart="walking"></canvas>
+      </div>
     </div>
 
     <div class="blocks__block chart">
-      <h2 class="chart__title">Total Distances</h2>
-      <canvas js-chart="total"></canvas>
+      <h2 class="chart__title">Total Distances (miles)</h2>
+
+      <div class="chart__chart">
+        <canvas js-chart="total"></canvas>
+      </div>
     </div>
   </div>
 
