--- a/src/styles/components/chart.scss
+++ b/src/styles/components/chart.scss
@@ -8,4 +8,24 @@
   &__title {
     margin-bottom: $SPACING_M;
   }
+
+  &__chart {
+    height: 0;
+    max-width: calc(100vw - (#{$SPACING_S} * 2));
+    padding-bottom: 50%;
+    position: relative;
+    width: 100%;
+  }
+
+  @include mq($from: medium) {
+    &__chart {
+      max-width: calc(100vw - (#{$SPACING_M} * 2));
+    }
+  }
+
+  @include mq($from: large) {
+    &__chart {
+      max-width: calc(100vw - (#{$SPACING_L} * 2));
+    }
+  }
 }
