Fixes based on /new testing

--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -9,8 +9,10 @@
           <img
             class="block__image"
             alt="{{ .Params.location }} {{ .Title }}"
+            height="600"
             loading="lazy"
-            src="/images/{{ $.Page.Params.handle }}/{{ .Params.handle }}.jpg"
+            src="{{ $.Site.BaseURL }}/images/{{ $.Page.Params.handle }}/{{ .Params.handle }}.jpg"
+            width="900"
           >
         </div>
 
@@ -43,6 +45,6 @@
     {{ end }}
   </div>
 
-  <link href="/vendors/leaflet.min.css" rel="stylesheet">
-  <script src="/vendors/leaflet.min.js"></script>
+  <link href="{{ $.Site.BaseURL }}/vendors/leaflet.min.css" rel="stylesheet">
+  <script src="{{ $.Site.BaseURL }}/vendors/leaflet.min.js"></script>
 {{ end }}
