--- a/src/styles/base/colour.scss
+++ b/src/styles/base/colour.scss
@@ -67,7 +67,7 @@ $COLOR_LIGHT_GREY: fade-colour($COLOR_BLACK, 20%);
     background-color: fade-colour($COLOR_GREEN);
 
     &::before {
-      background-image: url('/images/patterns/topography.png');
+      background-image: url('#{$BASE_URL}/images/patterns/topography.png');
       background-size: 350px auto;
       opacity: 0.6;
     }
@@ -83,7 +83,7 @@ $COLOR_LIGHT_GREY: fade-colour($COLOR_BLACK, 20%);
     background-color: fade-colour($COLOR_PURPLE);
 
     &::before {
-      background-image: url('/images/patterns/graph.png');
+      background-image: url('#{$BASE_URL}/images/patterns/graph.png');
       background-size: 21px auto;
     }
   }
