--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -20,24 +20,24 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://craigbaldwin.com/">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/images/favicon/manifest.json">
-  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#aed6f1">
-  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
-  <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ $.Site.BaseURL }}/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="{{ $.Site.BaseURL }}/images/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ $.Site.BaseURL }}/images/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="{{ $.Site.BaseURL }}/images/favicon/manifest.json">
+  <link rel="mask-icon" href="{{ $.Site.BaseURL }}/images/favicon/safari-pinned-tab.svg" color="#aed6f1">
+  <link rel="shortcut icon" href="{{ $.Site.BaseURL }}/images/favicon/favicon.ico">
+  <meta name="msapplication-config" content="{{ $.Site.BaseURL }}/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#aed6f1">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9975162-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9975162-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-9975162-1');
-  </script>
+  </script> -->
 
   <title>
     {{ if (eq .Title "Index") }}
