--- a/site/layouts/partials/client.html
+++ b/site/layouts/partials/client.html
@@ -8,7 +8,7 @@
         client__image--{{ .Params.handle }}
       "
       href="{{ .Params.link }}"
-      style="background-image: url('/images/clients/{{ .Params.handle }}.svg');"
+      style="background-image: url('{{ $.Site.BaseURL }}/images/clients/{{ .Params.handle }}.svg');"
       target="blank"
     ></a>
 
@@ -19,7 +19,7 @@
         client__image--{{ .Params.handle }}
         client__image--no-link
       "
-      style="background-image: url('/images/clients/{{ .Params.handle }}.svg');"
+      style="background-image: url('{{ $.Site.BaseURL }}/images/clients/{{ .Params.handle }}.svg');"
     ></div>
   {{ end }}
 
